--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 user www-data;
-worker_processes 4;
+worker_processes 1;
 pid /run/nginx.pid;
 daemon off;
 
@@ -50,7 +50,7 @@ http {
           listen 80; 
 
           # Path to the root of your installation
-          root /var/www/;
+          root /var/www/owncloud/;
 
           client_max_body_size 10G; # set max upload size
           fastcgi_buffers 64 4K;
